--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<script type="text/javascript">window.location.href="https://douyu.com/996997";</script>
+<script language="javascript" type="text/javascript">
+
+if (location.href == "http://acezed.tk/") {
+	window.location.replace("https://douyu.com/996997/");
+}
+
+</script>
